--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-cognito",
+  "name": "@xxx-trends/react-cognito",
   "scope": "winjer",
   "version": "1.5.2",
   "description": "Use Amazon Cognito with React and Redux",
   "main": "dist/react-cognito.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/isotoma/react-cognito.git"
+    "url": "https://github.com/xxx-trends/react-cognito.git"
   },
   "author": "Doug Winter",
   "license": "Apache-2.0",
