--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xxx-trends/react-cognito",
   "scope": "winjer",
-  "version": "1.5.5",
+  "version": "1.5.6",
   "description": "Use Amazon Cognito with React and Redux",
   "main": "lib/index.js",
   "repository": {
@@ -22,7 +22,7 @@
     "mocha": "--require scripts/mocha_runner test/*.js"
   },
   "scripts": {
-    "build": "babel src --out-dir lib",
+    "build": "cp src/* lib &&  babel src --out-dir lib -x .js",
     "lint": "eslint ./src",
     "lintfix": "eslint ./src --fix",
     "testonly": "PWD=$(pwd) NODE_ENV=test mocha $npm_package_options_mocha || true",
@@ -31,7 +31,7 @@
     "test-watch": "npm run testonly -- --watch --watch-extensions js",
     "examples": "[ -d examples/htdocs/dist ] || mkdir examples/htdocs/dist; babel --plugins transform-es2015-modules-umd src --ignore __tests__ examples/src --out-file examples/htdocs/dist/bundle.js",
     "doc": "esdoc",
-    "prepublish": "webpack -d; webpack -p"
+    "prepublish": "yarn build"
   },
   "devDependencies": {
     "amazon-cognito-identity-js": "1.19.0",
